--- a/medlog/package.json
+++ b/medlog/package.json
@@ -20,11 +20,13 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/background-geolocation": "^4.14.0",
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-mauron85-background-geolocation": "^2.3.6",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -36,5 +38,10 @@
     "@ionic/lab": "1.0.9",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-mauron85-background-geolocation": {}
+    }
+  }
 }
