--- a/medlog/package.json
+++ b/medlog/package.json
@@ -20,13 +20,25 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/background-geolocation": "^4.14.0",
+    "@ionic-native/background-geolocation": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/geolocation": "^4.15.0",
+    "@ionic-native/http": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-advanced-http": "^2.0.1",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.6",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -41,7 +53,20 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-mauron85-background-geolocation": {}
-    }
+      "cordova-plugin-mauron85-background-geolocation": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-advanced-http": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
